fix: competitionlist 검색날짜,지역 dropbox z-index주어서 앞으로 튀어나오게함

--- a/najuha-fronted/src/components/competitionlist.css
+++ b/najuha-fronted/src/components/competitionlist.css
@@ -126,7 +126,7 @@
     padding-left: 1.2rem;
     box-sizing: border-box;
     overflow-y: auto;
-    z-index: 1;
+    z-index: 11;
 }
 
 .competition-searchzone-option ul::-webkit-scrollbar{
@@ -140,6 +140,7 @@
     font-size: 1.6rem;
     letter-spacing: -0.1em;
     color: #828282;
+    /* background: #FCFCFC; */
 }
 
 .competition-searchzone-searchbar input{
